2008-09-02  Alberto Garcia  <agarcia@igalia.com>

	* debian/watch: Added debian/watch file

	* debian/control (Standards-Version): Updated to 3.8.0

2008-09-01  Alberto Garcia  <agarcia@igalia.com>

	=== Released Vagalume 0.7 ===

2008-09-01  Tim Wegener  <twegener@fastmail.fm>

	* vagalume.spec: Added 'libtool' to BuildRequires

2008-09-01  Alberto Garcia  <agarcia@igalia.com>

	* vagalume.spec: Updated for Vagalume 0.7

	* NEWS: Fixed typo

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* debian/changelog: Added entry for Vagalume 0.7

	* debian/rules: Removed extra comments.

	* README: Updated README file.

	* INSTALL: Updated installation instructions

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* vagalume.1
	* src/userconfig.c (get_cfg_filename): config renamed to config.xml

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* NEWS
	* configure.ac: Updated for the 0.7 release

2008-08-30  Alberto Garcia  <agarcia@igalia.com>

	* build-package.sh
	* debian/control.maemo2
	* debian/control.maemo3
	* debian/control.maemo4: Different control files for each Maemo
	version.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* debian/rules: Change the variable used to choose the target
	platform.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_stop_playing)
	(controller_quit_app): Don't update the window when the app is
	about to be shut down. This fixes a crash in Moblin.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac: Enable dbus support for Moblin
	* moblin/*: Remove unnecessary files.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-window.c (drag_end_cb, find_bookmark_by_id)
	(play_selected_row, edit_button_clicked, delete_button_clicked):
	Use gtk_tree_model_get() instead of gtk_tree_model_get_value()

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* vagalumectl.1: Minor updates to the man page.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am