@@ -1,3 +1,9 @@
+2009-01-31  Alberto Garcia  <agarcia@igalia.com>
+
+	* po/POTFILES.in
+	* src/protocol.c (lastfm_parse_track): Check for NULL in the
+	playlist (radio) title.
+
 2008-09-02  Alberto Garcia  <agarcia@igalia.com>
 
 	* debian/watch: Added debian/watch file
